k8s/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name:  caesarapp-server
  namespace: default
spec:
  selector:
    app:  caesarapp-server
  type:  NodePort
  ports:
    - name:  http
      port:  80
      targetPort:  80
    - name:  php-fpm
      port:  9000
      targetPort:  9000

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: caesarapp-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caesarapp-server
  strategy:
    type: Recreate   
  template:
    metadata:
      labels:
        app: caesarapp-server
        CICD_GIT_COMMIT: ${CICD_GIT_COMMIT}
    spec:
      containers:
      - name: caesarapp-server
        image: "caesarteam/caesar-server:${CICD_GIT_BRANCH}"
        imagePullPolicy: Always
        ports:
        - name: php-fpm
          containerPort: 9000
        volumeMounts:
        - mountPath: /var/www/html/public
          name: caesar-shared-static
        - mountPath: /var/www/html/var/jwt
          name: caesar-certificate  
      - name: nginx
        image: "nginx:alpine"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-config-volume
          subPath: nginx.conf
        - mountPath: /var/www/html/public
          name: caesar-shared-static
      volumes:
      - name: caesar-certificate
        persistentVolumeClaim:
          claimName: caesar-certificate
      - name: caesar-shared-static
        emptyDir:
          medium: Memory
          sizeLimit: "1Gi"
      - configMap:
          defaultMode: 256
          name: nginx-config
          optional: false
        name: nginx-config-volume
